improving category form template

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ol class="breadcrumb">
-      <li class="breadcrumb-list"><a routerLink='/' routerLinkActive="router-link-active">Home</a></li>
-      <li class="breadcrumb-list active"><a>Categories</a></li>
+      <li class="breadcrumb-item"><a routerLink='/' routerLinkActive="router-link-active">Home</a></li>
+      <li class="breadcrumb-item active">Categories</li>
   </ol>
 </nav>
 
