--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -2,22 +2,22 @@
   <ol class="breadcrumb">
       <li class="breadcrumb-item"><a routerLink='/' routerLinkActive="router-link-active">Home</a></li>
       <li class="breadcrumb-item"><a routerLink='/categories' routerLinkActive="router-link-active">Categorias</a></li>
-      <li class="breadcrumb-item active">Formulário de categoria</li>
+      <li class="breadcrumb-item active">{{pageTitle}}</li>
   </ol>
 </nav>
 
 <div class="row mb-4">
-  <div class="col-md">
-    <h1 class="h2 border-left pl-2">Formulário de categoria</h1>
+  <div class="col-md-10">
+    <h1 class="h2 border-left pl-2">{{pageTitle}}</h1>
   </div>  
-  <div class="col-md">
-    <a routerLink="new" class="btn btn-success float-right"> 
+  <div class="col-md-2">
+    <a routerLink="/categories" class="btn btn-success float-right"> 
      << Voltar
     </a>
   </div>
 </div>
 
-<form [formGroup]="categoryForm">
+<form [formGroup]="categoryForm" (submit)="submitForm()">
 
   <div class="card">
     <div class="card-header">
@@ -29,18 +29,23 @@
 
         <div class="form-group col-md-4">
           <label for="name">Nome</label>
-          <input type="text" class="form-control" id="name">
+          <input type="text" class="form-control" id="name" formControlName="name"> 
+          
+          <div class="text-danger" *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
+            <div *ngIf="categoryForm.get('name').errors.required">dado obrigatório</div>
+            <div *ngIf="categoryForm.get('name').errors.minlength">deve ter no mínimo 2 caracteres</div>
+          </div>
         </div>
 
         <div class="form-group col-md-8">
           <label for="description">Descrição</label>
-          <input type="text" class="form-control" id="description">
+          <input type="text" class="form-control" id="description" formControlName="description">
         </div>
       
       </div>
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
+  <button type="submit" [disabled]='submittingForm || categoryForm.invalid' class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
 
 </form>
