--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,47 +1,117 @@
 <nav>
   <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a routerLink='/' routerLinkActive="router-link-active">Home</a></li>
-      <li class="breadcrumb-item"><a routerLink='/entries' routerLinkActive="router-link-active">Lançamentos</a></li>
-      <li class="breadcrumb-item active">{{pageTitle}}</li>
+    <li class="breadcrumb-item"><a routerLink='/' routerLinkActive="router-link-active">Home</a></li>
+    <li class="breadcrumb-item"><a routerLink='/entries' routerLinkActive="router-link-active">Lançamentos</a></li>
+    <li class="breadcrumb-item active">{{pageTitle}}</li>
   </ol>
 </nav>
 
 <div class="row mb-4">
   <div class="col-md-10">
     <h1 class="h2 border-left pl-2">{{pageTitle}}</h1>
-  </div>  
-  <div class="col-md-2">
-    <a routerLink="/entries" class="btn btn-success float-right"> 
-     << Voltar
-    </a>
   </div>
+  <div class="col-md-2">
+    <a routerLink="/entries" class="btn btn-success float-right"><< Voltar </a> 
+  </div> 
 </div>
-
 <form [formGroup]="entryForm" (submit)="submitForm()">
 
   <div class="card">
     <div class="card-header">
       Informações sobre o Lançamento
     </div>
-  
-    <div class="card-body">
-      <div class="form-row">
 
-        <div class="form-group col-md-4">
-          <label for="name">Nome</label>
-          <input type="text" class="form-control" id="name" formControlName="name"> 
-          
+    <div class="card-body">
+
+      <div class="form-row">
+        <!-- type-->
+        <div class="form-group col-md-2">
+          <label for="type">tipo</label>
+
+          <select name="type" id="type" formControlName="type" class="form-control">
+            <option value="expense">Despesa</option>
+            <option value="revenue">Receita</option>
+          </select>
+
+          <div class="text-danger" *ngIf="entryForm.get('type').invalid && entryForm.get('type').touched">
+            <div *ngIf="entryForm.get('name').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+        <!-- name -->
+        <div class="form-group col-md-5">
+          <label for="name">Lançamento</label>
+          <input type="text" class="form-control" id="name" formControlName="name">
+
           <div class="text-danger" *ngIf="entryForm.get('name').invalid && entryForm.get('name').touched">
             <div *ngIf="entryForm.get('name').errors.required">dado obrigatório</div>
             <div *ngIf="entryForm.get('name').errors.minlength">deve ter no mínimo 2 caracteres</div>
           </div>
         </div>
 
+        <!-- Amount -->
+        <div class="form-group col-md-3">
+          <label for="amount">Valor</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text"> R$ </div>
+            </div>
+            <input [imask]="imaskConfig" type="text" class="form-control text-right" id="amount"
+              formControlName="amount">
+          </div>
+          <div class="text-danger" *ngIf="entryForm.get('amount').invalid && entryForm.get('amount').touched">
+            <div *ngIf="entryForm.get('amount').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+        <!-- date -->
+        <div class="form-group col-md-2">
+          <label for="amount">Data</label>
+
+          <p-calendar id="date" formControlName="date" inputStyleClass="formaControl" dataType="string"
+            dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]=true>
+          </p-calendar>
+
+          <div class="text-danger" *ngIf="entryForm.get('date').invalid && entryForm.get('date').touched">
+            <div *ngIf="entryForm.get('date').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="form-row">
+        <!-- paid -->
+        <div class="form-group col-md-2">
+          <label for="paid">Pago</label>
+          <div class="btn-group">
+            <label (click)="entryForm.get('paid').setValue(true)" [class.active]="entryForm.get('paid').value == true"
+              class="btn btn-outline-info">pago</label>
+            <label (click)="entryForm.get('paid').setValue(false)" [class.active]="entryForm.get('paid').value == false"
+              class="btn btn-outline-info">Pendente</label>
+          </div>
+          <div class="text-danger" *ngIf="entryForm.get('paid').invalid && entryForm.get('paid').touched">
+            <div *ngIf="entryForm.get('paid').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+         <!-- CategoryId -->
+         <div class="form-group col-md-1">
+          <label for="categoryId">Categoria</label>
+          <select name="categoryId" id="categoryId" formControlName="categoryId" class="form-control">
+            <option value="1">categoria 1</option>
+            <option value="2">categoria 2</option>
+          </select>
+          <div class="text-danger" *ngIf="entryForm.get('categoryId').invalid && entryForm.get('categoryId').touched">
+            <div *ngIf="entryForm.get('categoryId').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+        <!-- description -->
         <div class="form-group col-md-8">
           <label for="description">Descrição</label>
           <input type="text" class="form-control" id="description" formControlName="description">
         </div>
-      
+
       </div>
     </div>
   </div>
@@ -52,6 +122,8 @@
       <li *ngFor="let error of serverErrorMessages">{{error}}</li>
     </ul>
   </div>
-  <button type="submit" [disabled]='submittingForm || entryForm.invalid' class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
+  <button type="submit" [disabled]='submittingForm || entryForm.invalid'
+    class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
 
 </form>
+<pre> {{entryForm.value | json}}</pre>
