--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="col-md-2">
     <a routerLink="/entries" class="btn btn-success float-right">
-      << Voltar </a> </div> </div> <form [formGroup]="entryForm" (submit)="submitForm()">
+      << Voltar </a> </div> </div> <form [formGroup]="resourceForm" (submit)="submitForm()">
 
         <div class="card">
           <div class="card-header">
@@ -30,8 +30,8 @@
                   <option *ngFor="let type of typeOptions" [value]="type.value">{{type.text}}</option>
                 </select>
 
-                <div class="text-danger" *ngIf="entryForm.get('type').invalid && entryForm.get('type').touched">
-                  <div *ngIf="entryForm.get('name').errors.required">dado obrigatório</div>
+                <div class="text-danger" *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
+                  <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
                 </div>
               </div>
 
@@ -40,9 +40,9 @@
                 <label for="name">Lançamento</label>
                 <input type="text" class="form-control" id="name" formControlName="name">
 
-                <div class="text-danger" *ngIf="entryForm.get('name').invalid && entryForm.get('name').touched">
-                  <div *ngIf="entryForm.get('name').errors.required">dado obrigatório</div>
-                  <div *ngIf="entryForm.get('name').errors.minlength">deve ter no mínimo 2 caracteres</div>
+                <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
+                  <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
+                  <div *ngIf="resourceForm.get('name').errors.minlength">deve ter no mínimo 2 caracteres</div>
                 </div>
               </div>
 
@@ -56,8 +56,8 @@
                   <input [imask]="imaskConfig" type="text" class="form-control text-right" id="amount"
                     formControlName="amount">
                 </div>
-                <div class="text-danger" *ngIf="entryForm.get('amount').invalid && entryForm.get('amount').touched">
-                  <div *ngIf="entryForm.get('amount').errors.required">dado obrigatório</div>
+                <div class="text-danger" *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
+                  <div *ngIf="resourceForm.get('amount').errors.required">dado obrigatório</div>
                 </div>
               </div>
 
@@ -69,8 +69,8 @@
                   dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]=true>
                 </p-calendar>
 
-                <div class="text-danger" *ngIf="entryForm.get('date').invalid && entryForm.get('date').touched">
-                  <div *ngIf="entryForm.get('date').errors.required">dado obrigatório</div>
+                <div class="text-danger" *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
+                  <div *ngIf="resourceForm.get('date').errors.required">dado obrigatório</div>
                 </div>
               </div>
 
@@ -81,13 +81,13 @@
               <div class="form-group col-md-2">
                 <label for="paid">Pago</label>
                 <div class="btn-group">
-                  <label (click)="entryForm.get('paid').setValue(true)"
-                    [class.active]="entryForm.get('paid').value == true" class="btn btn-outline-info">pago</label>
-                  <label (click)="entryForm.get('paid').setValue(false)"
-                    [class.active]="entryForm.get('paid').value == false" class="btn btn-outline-info">Pendente</label>
+                  <label (click)="resourceForm.get('paid').setValue(true)"
+                    [class.active]="resourceForm.get('paid').value == true" class="btn btn-outline-info">pago</label>
+                  <label (click)="resourceForm.get('paid').setValue(false)"
+                    [class.active]="resourceForm.get('paid').value == false" class="btn btn-outline-info">Pendente</label>
                 </div>
-                <div class="text-danger" *ngIf="entryForm.get('paid').invalid && entryForm.get('paid').touched">
-                  <div *ngIf="entryForm.get('paid').errors.required">dado obrigatório</div>
+                <div class="text-danger" *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
+                  <div *ngIf="resourceForm.get('paid').errors.required">dado obrigatório</div>
                 </div>
               </div>
 
@@ -98,8 +98,8 @@
                   <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
                 </select>
                 <div class="text-danger"
-                  *ngIf="entryForm.get('categoryId').invalid && entryForm.get('categoryId').touched">
-                  <div *ngIf="entryForm.get('categoryId').errors.required">dado obrigatório</div>
+                  *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
+                  <div *ngIf="resourceForm.get('categoryId').errors.required">dado obrigatório</div>
                 </div>
               </div>
 
@@ -119,7 +119,7 @@
             <li *ngFor="let error of serverErrorMessages">{{error}}</li>
           </ul>
         </div>
-        <button type="submit" [disabled]='submittingForm || entryForm.invalid'
+        <button type="submit" [disabled]='submittingForm || resourceForm.invalid'
           class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
 
         </form>
