--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,9 +1,6 @@
-<nav>
-  <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a routerLink='/' routerLinkActive="router-link-active">Home</a></li>
-      <li class="breadcrumb-item active">Categories</li>
-  </ol>
-</nav>
+<app-bread-crumb
+  [items]='[{text:"Categories"}]' 
+></app-bread-crumb>
 
 <div class="row mb-4">
   <div class="col-md">
