--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,10 +1,6 @@
-<nav>
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a routerLink='/' routerLinkActive="router-link-active">Home</a></li>
-    <li class="breadcrumb-item"><a routerLink='/entries' routerLinkActive="router-link-active">Lançamentos</a></li>
-    <li class="breadcrumb-item active">{{pageTitle}}</li>
-  </ol>
-</nav>
+<app-bread-crumb
+  [items]='[{text:"Lançamentos", link:"/entries"}, {text: pageTitle}]' 
+></app-bread-crumb>
 
 <div class="row mb-4">
   <div class="col-md-10">
