--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -1,9 +1,6 @@
-<nav>
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a routerLink='/' routerLinkActive="router-link-active">Home</a></li>
-    <li class="breadcrumb-item active">Lançamentos</li>
-  </ol>
-</nav>
+<app-bread-crumb
+  [items]='[{text:"Lançamentos"}]' 
+></app-bread-crumb>
 
 <div class="row mb-4">
   <div class="col-md">
