--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -2,16 +2,12 @@
   [items]='[{text:"categorias", link:"/categories"}, {text: pageTitle}]' 
 ></app-bread-crumb>
 
-<div class="row mb-4">
-  <div class="col-md-10">
-    <h1 class="h2 border-left pl-2">{{pageTitle}}</h1>
-  </div>  
-  <div class="col-md-2">
-    <a routerLink="/categories" class="btn btn-success float-right"> 
-     << Voltar
-    </a>
-  </div>
-</div>
+<app-page-header
+  [page-title]="pageTitle"
+  button-text="<< Voltar"
+  button-link="/categories" 
+  button-class="btn-light"
+></app-page-header>
 
 <form [formGroup]="resourceForm" (submit)="submitForm()">
 
