--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,121 +1,119 @@
-<app-bread-crumb
-  [items]='[{text:"Lançamentos", link:"/entries"}, {text: pageTitle}]' 
-></app-bread-crumb>
+<app-bread-crumb [items]='[{text:"Lançamentos", link:"/entries"}, {text: pageTitle}]'></app-bread-crumb>
 
-<div class="row mb-4">
-  <div class="col-md-10">
-    <h1 class="h2 border-left pl-2">{{pageTitle}}</h1>
+<app-page-header 
+  [page-title]="pageTitle" 
+  button-text="<< Voltar" 
+  button-link="//entries" 
+  button-class="btn-light">
+</app-page-header>
+
+<form [formGroup]="resourceForm" (submit)="submitForm()">
+  <div class="card">
+    <div class="card-header">
+      Informações sobre o Lançamento
+    </div>
+
+    <div class="card-body">
+
+      <div class="form-row">
+        <!-- type-->
+        <div class="form-group col-md-2">
+          <label for="type">tipo</label>
+
+          <select name="type" id="type" formControlName="type" class="form-control">
+            <option *ngFor="let type of typeOptions" [value]="type.value">{{type.text}}</option>
+          </select>
+
+          <div class="text-danger" *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
+            <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+        <!-- name -->
+        <div class="form-group col-md-5">
+          <label for="name">Lançamento</label>
+          <input type="text" class="form-control" id="name" formControlName="name">
+
+          <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
+            <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
+            <div *ngIf="resourceForm.get('name').errors.minlength">deve ter no mínimo 2 caracteres</div>
+          </div>
+        </div>
+
+        <!-- Amount -->
+        <div class="form-group col-md-3">
+          <label for="amount">Valor</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text"> R$ </div>
+            </div>
+            <input [imask]="imaskConfig" type="text" class="form-control text-right" id="amount"
+              formControlName="amount">
+          </div>
+          <div class="text-danger" *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
+            <div *ngIf="resourceForm.get('amount').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+        <!-- date -->
+        <div class="form-group col-md-2">
+          <label for="amount">Data</label>
+
+          <p-calendar id="date" formControlName="date" inputStyleClass="formaControl" dataType="string"
+            dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]=true>
+          </p-calendar>
+
+          <div class="text-danger" *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
+            <div *ngIf="resourceForm.get('date').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="form-row">
+        <!-- paid -->
+        <div class="form-group col-md-2">
+          <label for="paid">Pago</label>
+          <div class="btn-group">
+            <label (click)="resourceForm.get('paid').setValue(true)"
+              [class.active]="resourceForm.get('paid').value == true" class="btn btn-outline-info">pago</label>
+            <label (click)="resourceForm.get('paid').setValue(false)"
+              [class.active]="resourceForm.get('paid').value == false" class="btn btn-outline-info">Pendente</label>
+          </div>
+          <div class="text-danger" *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
+            <div *ngIf="resourceForm.get('paid').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+        <!-- CategoryId -->
+        <div class="form-group col-md-3">
+          <label for="categoryId">Categoria</label>
+          <select name="categoryId" id="categoryId" formControlName="categoryId" class="form-control">
+            <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
+          </select>
+          <div class="text-danger"
+            *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
+            <div *ngIf="resourceForm.get('categoryId').errors.required">dado obrigatório</div>
+          </div>
+        </div>
+
+        <!-- description -->
+        <div class="form-group col-md-7">
+          <label for="description">Descrição</label>
+          <input type="text" class="form-control" id="description" formControlName="description">
+        </div>
+
+      </div>
+    </div>
   </div>
-  <div class="col-md-2">
-    <a routerLink="/entries" class="btn btn-success float-right">
-      << Voltar </a> </div> </div> <form [formGroup]="resourceForm" (submit)="submitForm()">
 
-        <div class="card">
-          <div class="card-header">
-            Informações sobre o Lançamento
-          </div>
+  <div class="alert alert-danger mt-3" *ngIf="serverErrorMessages">
+    <strong> Erro no servidor:</strong>
+    <ul>
+      <li *ngFor="let error of serverErrorMessages">{{error}}</li>
+    </ul>
+  </div>
+  <button type="submit" [disabled]='submittingForm || resourceForm.invalid'
+    class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
 
-          <div class="card-body">
-
-            <div class="form-row">
-              <!-- type-->
-              <div class="form-group col-md-2">
-                <label for="type">tipo</label>
-
-                <select name="type" id="type" formControlName="type" class="form-control">
-                  <option *ngFor="let type of typeOptions" [value]="type.value">{{type.text}}</option>
-                </select>
-
-                <div class="text-danger" *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
-                  <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
-                </div>
-              </div>
-
-              <!-- name -->
-              <div class="form-group col-md-5">
-                <label for="name">Lançamento</label>
-                <input type="text" class="form-control" id="name" formControlName="name">
-
-                <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
-                  <div *ngIf="resourceForm.get('name').errors.required">dado obrigatório</div>
-                  <div *ngIf="resourceForm.get('name').errors.minlength">deve ter no mínimo 2 caracteres</div>
-                </div>
-              </div>
-
-              <!-- Amount -->
-              <div class="form-group col-md-3">
-                <label for="amount">Valor</label>
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text"> R$ </div>
-                  </div>
-                  <input [imask]="imaskConfig" type="text" class="form-control text-right" id="amount"
-                    formControlName="amount">
-                </div>
-                <div class="text-danger" *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
-                  <div *ngIf="resourceForm.get('amount').errors.required">dado obrigatório</div>
-                </div>
-              </div>
-
-              <!-- date -->
-              <div class="form-group col-md-2">
-                <label for="amount">Data</label>
-
-                <p-calendar id="date" formControlName="date" inputStyleClass="formaControl" dataType="string"
-                  dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]=true>
-                </p-calendar>
-
-                <div class="text-danger" *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
-                  <div *ngIf="resourceForm.get('date').errors.required">dado obrigatório</div>
-                </div>
-              </div>
-
-            </div>
-
-            <div class="form-row">
-              <!-- paid -->
-              <div class="form-group col-md-2">
-                <label for="paid">Pago</label>
-                <div class="btn-group">
-                  <label (click)="resourceForm.get('paid').setValue(true)"
-                    [class.active]="resourceForm.get('paid').value == true" class="btn btn-outline-info">pago</label>
-                  <label (click)="resourceForm.get('paid').setValue(false)"
-                    [class.active]="resourceForm.get('paid').value == false" class="btn btn-outline-info">Pendente</label>
-                </div>
-                <div class="text-danger" *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
-                  <div *ngIf="resourceForm.get('paid').errors.required">dado obrigatório</div>
-                </div>
-              </div>
-
-              <!-- CategoryId -->
-              <div class="form-group col-md-3">
-                <label for="categoryId">Categoria</label>
-                <select name="categoryId" id="categoryId" formControlName="categoryId" class="form-control">
-                  <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
-                </select>
-                <div class="text-danger"
-                  *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
-                  <div *ngIf="resourceForm.get('categoryId').errors.required">dado obrigatório</div>
-                </div>
-              </div>
-
-              <!-- description -->
-              <div class="form-group col-md-7">
-                <label for="description">Descrição</label>
-                <input type="text" class="form-control" id="description" formControlName="description">
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="alert alert-danger mt-3" *ngIf="serverErrorMessages">
-          <strong> Erro no servidor:</strong>
-          <ul>
-            <li *ngFor="let error of serverErrorMessages">{{error}}</li>
-          </ul>
-        </div>
-        <button type="submit" [disabled]='submittingForm || resourceForm.invalid'
-          class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
-
-        </form>
+</form>
