--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -96,12 +96,8 @@
     </div>
   </div>
 
-  <div class="alert alert-danger mt-3" *ngIf="serverErrorMessages">
-    <strong> Erro no servidor:</strong>
-    <ul>
-      <li *ngFor="let error of serverErrorMessages">{{error}}</li>
-    </ul>
-  </div>
+  <app-server-error-messages [server-error-messages]="serverErrorMessages"></app-server-error-messages>
+
   <button type="submit" [disabled]='submittingForm || resourceForm.invalid'
     class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
 
