--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -100,5 +100,5 @@
 
   <button type="submit" [disabled]='submittingForm || resourceForm.invalid'
     class="btn btn-primary btn-lg float-right mt-2">Salvar</button>
-
+    <!-- <pre> {{resourceForm.value | json}}</pre> -->
 </form>
