--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -36,7 +36,7 @@
         <label for="year">Ano</label>
         <select #year name="year" id="year" class="form-control">
           <option value="">Selecione um ano</option>
-          <option value="2016">2019</option>
+          <option value="2016">2016</option>
           <option value="2017">2017</option>
           <option value="2018">2018</option>
           <option value="2019">2019</option>
@@ -59,7 +59,7 @@
     </div>
     <div class="card-body">
       <h3 class="card-title">
-        1500
+        {{revenueTotal}}
       </h3>
     </div>
   </div>
@@ -70,7 +70,7 @@
       </div>
       <div class="card-body">
         <h3 class="card-title">
-          1500
+          {{expenseTotal}}
         </h3>
       </div>
     </div>
@@ -81,7 +81,7 @@
         </div>
         <div class="card-body">
           <h3 class="card-title">
-            1500
+            {{balance}}
           </h3>
         </div>
       </div>
@@ -92,10 +92,10 @@
 
 <div class="row mt-5 mb-4">
   <div class="col-md-6">
-    GRÁFICO DE RECEITAS
+    <p-chart type="bar" [data]="revenueChartData" [options]="chartOptions"></p-chart>
   </div>
   
   <div class="col-md-6">
-      GRÁFICO DE DESPESAS
+      <p-chart type="bar" [data]="expenseChartData" [options]="chartOptions"></p-chart>
   </div>
 </div>
